--- a/ChinhQuyen/Slide-Tiếp Nhận Ý Kiến_fix.html
+++ b/ChinhQuyen/Slide-Tiếp Nhận Ý Kiến_fix.html
@@ -125,21 +125,17 @@
     class="d-flex align-items-center justify-content-center position-relative"
     id="carousel-banner-cd"
   >
-    <div class="custom-carousel-banner-prev" id="prevButton-banner-cd">
+    <!-- <div class="custom-carousel-banner-prev" id="prevButton-banner-cd">
       <span
         class="ct-btn-carousel-bannner d-flex align-items-center justify-content-center"
       >
         <img src="/documents/39403/307879/left.svg" width="8px" height="16px" />
       </span>
-    </div>
+    </div> -->
     <div class="custom-carousel-container">
       <div class="custom-carousel-inner">
         <div class="custom-item-banner-cd">
-          <a
-            class="p-3 background2"
-            href="/tiep-nhan-kien-nghi"
-            target="_blank"
-          >
+          <a class="p-3 background2" href="/hoi-dap-kien-nghi" target="_blank">
             <span> TIẾP NHẬN <br />KIẾN NGHỊ</span>
           </a>
         </div>
@@ -214,7 +210,7 @@
         </div>
       </div>
     </div>
-    <div class="custom-carousel-banner-next" id="nextButton-banner-cd">
+    <!-- <div class="custom-carousel-banner-next" id="nextButton-banner-cd">
       <span
         class="ct-btn-carousel-bannner d-flex align-items-center justify-content-center"
         id="next-button-banner"
@@ -226,7 +222,7 @@
           height="16px"
         />
       </span>
-    </div>
+    </div> -->
   </div>
 </div>
 
