--- a/ChinhQuyen/tabs_tantest_fix.html
+++ b/ChinhQuyen/tabs_tantest_fix.html
@@ -139,110 +139,8 @@
     .ct-sp {
       display: none !important;
     }
+    #tabPanel1 {
+      display: none !important;
+    }
   }
 </style>
-<script>
-  const dropdown = fragmentElement.querySelector(".navbar-collapse");
-  const editMode = document.body.classList.contains("has-edit-mode-menu");
-  const tabItems = [].slice.call(
-    fragmentElement.querySelectorAll(
-      '[data-fragment-namespace="' + fragmentNamespace + '"].nav-link'
-    )
-  );
-  const tabPanelItems = [].slice.call(
-    fragmentElement.querySelectorAll(
-      '[data-fragment-namespace="' + fragmentNamespace + '"].tab-panel-item'
-    )
-  );
-  const viewMoreElement = fragmentElement.querySelector(".view-more-cddh");
-  const viewMoreElementSmall = fragmentElement.querySelector(
-    ".view-more-cddh-small"
-  );
-
-  // Hàm ẩn/hiện phần tử view-more-cddh dựa trên tab được chọn
-  function toggleViewMore(index) {
-    if (index === 1) {
-      // Tab thứ hai
-      viewMoreElement.style.display = "block";
-      viewMoreElementSmall.style.display = "block";
-    } else {
-      viewMoreElement.style.display = "none";
-      viewMoreElementSmall.style.display = "none";
-    }
-  }
-
-  function activeTab(item) {
-    tabItems.forEach(function (tabItem) {
-      tabItem.setAttribute("aria-selected", false);
-      tabItem.classList.remove("active");
-    });
-    item.setAttribute("aria-selected", true);
-    item.classList.add("active");
-  }
-
-  function activeTabPanel(item) {
-    tabPanelItems.forEach(function (tabPanelItem) {
-      if (!tabPanelItem.classList.contains("d-none")) {
-        tabPanelItem.classList.add("d-none");
-      }
-    });
-    item.classList.remove("d-none");
-  }
-
-  function openTabPanel(event, i) {
-    const currentTarget = event.currentTarget;
-    const target = event.target;
-    const isEditable =
-      target.hasAttribute("data-lfr-editable-id") ||
-      target.hasAttribute("contenteditable");
-
-    if (!isEditable || !editMode) {
-      currentTarget.focus();
-
-      activeTab(currentTarget, i);
-      activeTabPanel(tabPanelItems[i]);
-
-      // Gọi hàm toggleViewMore để hiển thị hoặc ẩn phần tử view-more-cddh
-      toggleViewMore(i);
-
-      this.tabIndex = i;
-    }
-  }
-
-  function main() {
-    const initialState = !this.tabIndex || this.tabIndex >= tabItems.length;
-    let tabItemSelected = tabItems[0];
-
-    if (initialState) {
-      tabItems.forEach(function (item, i) {
-        if (!i) {
-          activeTab(item);
-        }
-        item.addEventListener("click", function (event) {
-          openTabPanel(event, i);
-        });
-      });
-      tabPanelItems.forEach(function (item, i) {
-        if (!i) {
-          activeTabPanel(item);
-        }
-      });
-      // Đảm bảo trạng thái hiển thị ban đầu cho view-more-cddh
-      toggleViewMore(0); // Tab đầu tiên (index 0) không hiển thị
-    } else {
-      tabItemSelected = tabItems[this.tabIndex];
-      tabItems.forEach(function (item, i) {
-        activeTab(tabItems[this.tabIndex]);
-        item.addEventListener("click", function (event) {
-          openTabPanel(event, i);
-        });
-      });
-      tabPanelItems.forEach(function () {
-        activeTabPanel(tabPanelItems[this.tabIndex]);
-      });
-      toggleViewMore(this.tabIndex); // Hiển thị đúng trạng thái dựa trên tabIndex
-    }
-  }
-
-  main();
-</script>
