--- a/Không Gian Văn Hoá/TrangSlideTinTucVanHoa.html
+++ b/Không Gian Văn Hoá/TrangSlideTinTucVanHoa.html
@@ -146,7 +146,7 @@
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <div class="title-news mb-4 title-activity-tintuc d-flex justify-content-between align-items-center border-bottom-red-2px">
                 <h3 class="title-item pr-2">ẢNH</h3>
-                <button onclick="location.reload()">Xem thêm  <i class="pl-2 fa fa-arrow-right"></i></button>
+                <!-- <button onclick="location.reload()">Xem thêm  <i class="pl-2 fa fa-arrow-right"></i></button> -->
             </div>
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
