--- a/TrangChu/Slide-CarTest-dvc-nghiquyet-chuyendoiso-kgvh copy.html
+++ b/TrangChu/Slide-CarTest-dvc-nghiquyet-chuyendoiso-kgvh copy.html
@@ -150,10 +150,10 @@
     }
     .glyphicon-chevron-left {
         margin-left: -30px !important;
-        margin-top: -25px !important;
+        margin-top: 0 !important;
     }
     .glyphicon-chevron-right {
-        margin-top: -25px !important;
+        margin-top: 0 !important;
         margin-right: -30px !important;
     }
     .glyphicon-chevron-left:before {
