--- a/TrangChu/Slide-CarTest-dvc-nghiquyet-chuyendoiso-kgvh.html
+++ b/TrangChu/Slide-CarTest-dvc-nghiquyet-chuyendoiso-kgvh.html
@@ -191,12 +191,22 @@
         width: 25%;
         padding: 0 10px;
     }
-    @media(max-width: 767px) {
+    @media(max-width: 425px) {
+        .banner-list-dvc-item {
+            width: 100%;
+            padding: 18px 10px;
+        }
+        .carousel-control{
+            width: 9% !important;
+        }
+    }
+    @media screen and (min-width: 426px) and (max-width: 768px) {
         .banner-list-dvc-item {
             width: 100%;
             padding: 10px 10px;
         }
     }
+   
 </style>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
