--- a/pct_thuy/pct_thuy_anh_video copy.html
+++ b/pct_thuy/pct_thuy_anh_video copy.html
@@ -354,7 +354,7 @@
                             title = curEntry.getTitle(locale)
                             article = renderer.getArticle()
                             description = article.getDescription(locale)
-                            viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+                            viewURL = "/web/hcm/-/${renderer.getUrlTitle()}"
                             smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest)!"/documents/20123/41696/cover-emty-img.jpg"
                             indexLocal = indexLocal + 1
                             />
@@ -408,7 +408,7 @@
                             title = curEntry.getTitle(locale)
                             article = renderer.getArticle()
                             description = article.getDescription(locale)
-                            viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+                            viewURL = "/web/hcm/-/${renderer.getUrlTitle()}"
                             smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest)!"/documents/20123/41696/cover-emty-img.jpg"
                             indexLocal = indexLocal + 1
                             />
