--- a/Không Gian Văn Hoá/TrangChuVanHoa_fix.html
+++ b/Không Gian Văn Hoá/TrangChuVanHoa_fix.html
@@ -190,8 +190,16 @@
         text-decoration-skip-ink: none;
 
     }
+    @media only screen and (max-width: 480px) {
+        .box-banner-laco-tintuc {
+            padding: 10px 30px;
+        }
+        .title-item {
+            width: 65%;
+            font-size: 24px !important;
+        }
+    }
 
-    
 </style>
 <#assign dateFormatDay = "dd" />
 <#assign monthFormatDay = "MM" />
@@ -215,44 +223,44 @@
         <div class="article-list">
             <div class="p-0 border-2 row m-0">
 
-            <#assign indexLocal = 0/>
-            <#list entries as curEntry>
-                <#assign
-                renderer = curEntry.getAssetRenderer()
-                className = renderer.getClassName() />
-                <#if className == "com.liferay.journal.model.JournalArticle" && curEntry.getAvailableLanguageIds()?seq_contains(locale) && indexLocal &lt; 4>
+                <#assign indexLocal = 0/>
+                <#list entries as curEntry>
                     <#assign
-                    title = curEntry.getTitle(locale)
-                    createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
-                    createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
-                    createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
-                    createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
-                    article = renderer.getArticle()
-                    description = article.getDescription(locale)
-                    ddmTemplateKey = article.getDDMTemplateKey()
-                    curEntry = curEntry
-                    viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
-                    indexLocal = indexLocal + 1 />
-                    <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
-                        <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
-                    <#else>
-                        <#assign smallImageUrl = "/documents/20123/41696/cover-emty-img.jpg" />
-                    </#if>
-                    <div class="col-12 col-md-6 m-0 px-0 pb-3" onclick="location.href='${viewURL}'" style="cursor: pointer;">
-                        <div class="d-flex flex-row align-items-center">
-                            <div class="w-h-140 flex-shrink-0">
-                                <img
-                                        class="w-100 h-100 border-radius-50" src="${smallImageUrl}" alt="fls1.jpg">
-                            </div>
-                            <div class="title-tintuc pl-3">
-                                <span class="custom-date-time">${createTime} | ${createDay}/${createMonth}/${createYear}</span>
-                                <p class="content-title font-size-16 mb-1 mt-2 mt-md-0 text-2-lines">${title}</p>
-                                <button>Xem chi tiết  <i class="fa fa-arrow-right"></i></button>
+                    renderer = curEntry.getAssetRenderer()
+                    className = renderer.getClassName() />
+                    <#if className == "com.liferay.journal.model.JournalArticle" && curEntry.getAvailableLanguageIds()?seq_contains(locale) && indexLocal &lt; 4>
+                        <#assign
+                        title = curEntry.getTitle(locale)
+                        createDay = dateUtil.getDate(curEntry.getCreateDate(), dateFormatDay, locale)
+                        createMonth = dateUtil.getDate(curEntry.getCreateDate(), monthFormatDay, locale)
+                        createYear = dateUtil.getDate(curEntry.getCreateDate(), yearFormatDay, locale)
+                        createTime = dateUtil.getDate(curEntry.getCreateDate(), dateFormatTime, locale)
+                        article = renderer.getArticle()
+                        description = article.getDescription(locale)
+                        ddmTemplateKey = article.getDDMTemplateKey()
+                        curEntry = curEntry
+                        viewURL = "${themeDisplay.getPathFriendlyURLPublic()}${themeDisplay.getSiteGroup().getFriendlyURL()}/-/${renderer.getUrlTitle()}"
+                        indexLocal = indexLocal + 1 />
+                        <#if curEntry.getAssetRenderer().getThumbnailPath(renderRequest)??>
+                            <#assign smallImageUrl = curEntry.getAssetRenderer().getThumbnailPath(renderRequest) >
+                        <#else>
+                            <#assign smallImageUrl = "/image/journal/article?img_id=233744&t=1735059047223" >
+                        </#if>
+                        <div class="col-12 col-md-6 m-0 px-0 pb-3" onclick="location.href='${viewURL}'" style="cursor: pointer;">
+                            <div class="d-flex flex-row align-items-center">
+                                <div class="w-h-140 flex-shrink-0">
+                                    <img
+                                            class="w-100 h-100 border-radius-50" src="${smallImageUrl}" alt="fls1.jpg">
+                                </div>
+                                <div class="title-tintuc pl-3">
+                                    <span class="custom-date-time">${createTime} | ${createDay}/${createMonth}/${createYear}</span>
+                                    <p class="content-title font-size-16 mb-1 mt-2 mt-md-0 text-2-lines">${title}</p>
+                                    <button>Xem chi tiết  <i class="fa fa-arrow-right"></i></button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </#if>
-            </#list>
+                    </#if>
+                </#list>
             </div>
             <div class="box-banner-laco-tintuc mt-3">
                 <span>
