--- a/TienIch/Menu ngang.html
+++ b/TienIch/Menu ngang.html
@@ -107,7 +107,14 @@
     .icon-head:active {
         background-color: #BCE6FE;
     }
-
+  @media (min-width: 1331px) and (max-width: 1440px) {
+    .icon-head span{
+        font-size: 16px !important;
+    }
+    .custom-carousel-item-dv{
+        max-width: 22% !important;
+    }
+  }
     @media (max-width: 1200px) {
         .custom-carousel-item-dv {
             flex: 0 0 25%;
